Sec43_Chap403-NOK: Upgraded code to 4.0.1 and optimized it